// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers handle SET_CUSTOM_POSSIBLE_ITEMS 1`] = `
Object {
  "length": 6,
  "options": Object {
    "custom": 2,
    "generic": Object {
      "capitalLetters": true,
      "letters": true,
      "numbers": true,
      "symbols": true,
    },
  },
  "optionsIndex": 0,
}
`;

exports[`reducers handle SET_LENGTH 1`] = `
Object {
  "length": 7,
  "options": Object {
    "custom": 1,
    "generic": Object {
      "capitalLetters": true,
      "letters": true,
      "numbers": true,
      "symbols": true,
    },
  },
  "optionsIndex": 0,
}
`;

exports[`reducers handle SET_OPTIONS_INDEX 1`] = `
Object {
  "length": 6,
  "options": Object {
    "custom": 1,
    "generic": Object {
      "capitalLetters": true,
      "letters": true,
      "numbers": true,
      "symbols": true,
    },
  },
  "optionsIndex": 1,
}
`;

exports[`reducers handle TOGGLE_GENERIC 1`] = `
Object {
  "length": 6,
  "options": Object {
    "custom": 1,
    "generic": Object {
      "capitalLetters": true,
      "letters": false,
      "numbers": true,
      "symbols": true,
    },
  },
  "optionsIndex": 0,
}
`;

exports[`reducers return initial state 1`] = `
Object {
  "length": 6,
  "options": Object {
    "custom": 1,
    "generic": Object {
      "capitalLetters": true,
      "letters": true,
      "numbers": true,
      "symbols": true,
    },
  },
  "optionsIndex": 0,
}
`;
